--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-chat-ui",
+  "name": "@harryy/react-chat-ui",
   "version": "0.4.0",
   "description": "A library of React components for building chat UI's",
   "repository": "https://github.com/brandonmowat/react-chat-ui",
